# rust-axum-sessions

./: Cargo.toml  README.md
migrations/: 20231108213118_init.sql
src/: lib.rs  main.rs  users.rs  web.rs
src/web/: app.rs  auth.rs  protected.rs
templates/: login.html  protected.html
